# stokyonetimi

./: .gitattributes  App.tsx  README.md  deployment-desktop.md  deployment.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
.github/workflows/: deploy.yml  release-desktop.yml
components/: EntityManagementPage.tsx  Modal.tsx  SearchableSelect.tsx  Sidebar.tsx  icons.tsx
components/modals/: AccountFormModal.tsx  ConfirmDeleteModal.tsx  ModalComponentProps.ts  ProductFormModal.tsx  ProductGroupFormModal.tsx  ProductionVoucherFormModal.tsx  ShelfFormModal.tsx  SimpleFormModal.tsx  StockMovementFormModal.tsx  StockTransferFormModal.tsx  WarehouseFormModal.tsx
context/: ThemeContext.tsx  ToastContext.tsx
data/: setupSql.ts  version.ts  versionUpdates.ts
hooks/: useInventory.ts  useLocalStorage.ts
pages/: CustomersPage.tsx  DashboardPage.tsx  ProductGroupsPage.tsx  ProductionVouchersPage.tsx  ProductsPage.tsx  ReportsPage.tsx  SettingsMenuPage.tsx  SetupPage.tsx  StockOverviewPage.tsx  SupabaseSetupGuidePage.tsx  SuppliersPage.tsx  UnitsPage.tsx  WarehouseGroupsPage.tsx  WarehousesPage.tsx
pages/reports/: CurrentStockReportPage.tsx  InventoryReportPage.tsx  StockLedgerReportPage.tsx  StockMovementReportPage.tsx
scripts/: sync-version.cjs  sync-version.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/wix/: main.wxs
styles/: common.ts
types/: database.types.ts
utils/: csvExporter.ts  excelExporter.ts  helpers.ts  supabase.ts
