[package]
name = "stok-takip-uygulamasi"
version = "1.6.5"
description = "Stok Takip Uygulaması"
authors = ["Hasan Durmuş <hasan.drms@gmail.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "http-all", "shell-open", "fs-write-file", "dialog-save"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]